iter_language/tests/corpus/compose/invalid/metadata-non-string-value.iter
queue main file { path = "./.iter/queue" }

trigger nightly cron {
    schedule = "0 0 * * *"
    metadata {
        retries = 3
    }
    target = main
}
